# envvar-manager

./: Cargo.toml  README.md
migrations/01-create_db/: up.sql
migrations/02-add_secret_variables/: up.sql
src/: config.rs  database.rs  main.rs  output.rs  repository.rs  resolver.rs
src/app/: export.rs  mod.rs
src/app/env/: add.rs  list.rs  mod.rs  remove.rs  update.rs  yubikey.rs
src/app/rule/: add.rs  list.rs  mod.rs  remove.rs  update.rs
src/app/template/: add.rs  list.rs  mod.rs  remove.rs  update.rs
src/command/: add.rs  export.rs  list.rs  mod.rs  remove.rs  update.rs  yubikey.rs
src/command/rule/: add.rs  list.rs  mod.rs  remove.rs  update.rs
src/entities/: env_var.rs  mod.rs  rule.rs  template.rs
src/gui/: mod.rs
src/input/: gui.rs  mod.rs  terminal.rs
src/sqlite/: env_var.rs  mod.rs  rule.rs  template.rs
