[package]
name = "em"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
chrono = "0.4.38"
clap = { version = "4.5.18", features = ["derive"] }
clap_complete = "4.5.29"
dirs = "5.0.1"
env_logger = "0.11.5"
iced = "0.13.1"
log = "0.4.22"
rusqlite = { version = "0.32.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.210", features = ["derive"] }
tabled = "0.16.0"
toml = "0.8.19"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast-lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
unused_self = "allow"
