[package]
name = "em"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chrono = "*"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
dirs = "5.0"
env_logger = "0.11"
iced = "0.13"
include_dir = "0.7.4"
lazy_static = "1.5.0"
log = "0.4"
rusqlite = { version = "0.31", features = ["chrono"] }
rusqlite_migration = { version = "1.2.0", features = ["from-directory"] }
serde = { version = "1.0", features = ["derive"] }
tabled = "0.16"
toml = "0.8"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

cast-lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
unused_self = "allow"
